Enum user_role {
  ADMIN
  STORE_MANAGER
  CASHIER
}

Enum payment_status {
  PENDING
  PAID
  EXPIRED
  FAILED
  CANCELLED
}

Enum payment_method {
  CASH
  MIDTRANS_QRIS
  MIDTRANS_VA
  MIDTRANS_CC
}

Enum audit_action {
  CREATE
  UPDATE
  DELETE
}

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  username varchar(50) [unique, not null]
  email varchar(255) [unique, not null]
  password_hash varchar(255) [not null]
  role user_role [not null, default: 'CASHIER']
  
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table members {
  id uuid [pk, default: `gen_random_uuid()`]
  member_code varchar(20) [unique, not null]
  name_encrypted bytea
  phone_encrypted bytea
  email_encrypted bytea
  phone_bindex varchar(64) [not null]
  email_bindex varchar(64)
  points int [not null, default: 0]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz
}

Table categories {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(100) [not null]
  created_by uuid [not null]
  updated_by uuid [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  idempotency_key varchar(100) [unique]
  deleted_at timestamptz
  deleted_by uuid
}

Table products {
  id uuid [pk, default: `gen_random_uuid()`]
  category_id uuid [not null]
  name varchar(150) [not null]
  sku varchar(50) [not null]
  price numeric(12,3) [not null]
  stock numeric(12,3) [not null, default: 0]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz
}

Table taxes {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(50) [unique, not null]
  rate numeric(5,2) [not null]
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz
}

Table product_taxes {
  product_id uuid [not null]
  tax_id uuid [not null]
  Indexes {
    (product_id, tax_id) [pk]
  }
}

Table orders {
  id uuid [pk, default: `gen_random_uuid()`]
  order_no varchar(50) [unique, not null]
  user_id uuid [not null]
  member_id uuid
  payment_method payment_method [not null, default: 'CASH']
  payment_status payment_status [not null, default: 'PENDING']
  total_qty numeric(12,3) [not null]
  sub_total numeric(12,3) [not null]
  total_tax numeric(12,3) [not null]
  grand_total numeric(12,3) [not null]
  created_at timestamptz [not null, default: `now()`]
}

Table order_items {
  id uuid [pk, default: `gen_random_uuid()`]
  order_id uuid [not null]
  product_id uuid [not null] 
  product_name varchar(150) [not null]
  base_price numeric(12,3) [not null]
  qty numeric(12,3) [not null]
  sub_total numeric(12,3) [not null]
}

Table order_item_taxes {
  id uuid [pk, default: `gen_random_uuid()`]
  order_item_id uuid [not null]
  tax_id uuid
  
  tax_name varchar(50) [not null]
  tax_rate numeric(5,2) [not null]
  tax_amount numeric(12,3) [not null]
}

Table audit_logs {
  id uuid [pk, default: `gen_random_uuid()`]
  actor_id uuid [not null]
  actor_role user_role [not null]
  action audit_action [not null]
  entity_name varchar(50) [not null]
  entity_id varchar(255) [not null]
  old_values jsonb
  new_values jsonb
  ip_address varchar(45)
  user_agent text
  created_at timestamptz [not null, default: `now()`]
  Indexes {
    actor_id [name: 'idx_audit_logs_actor']
    (entity_name, entity_id) [name: 'idx_audit_logs_entity']
    created_at [name: 'idx_audit_logs_date']
  }
}

Ref: products.category_id > categories.id [delete: restrict, update: cascade]
Ref: product_taxes.product_id > products.id [delete: cascade, update: cascade]
Ref: product_taxes.tax_id > taxes.id [delete: cascade, update: cascade]
Ref: orders.user_id > users.id [delete: restrict, update: cascade]
Ref: orders.member_id > members.id [delete: set null, update: cascade]
Ref: order_items.order_id > orders.id [delete: cascade, update: cascade]
Ref: order_items.product_id > products.id [delete: restrict, update: cascade]
Ref: order_item_taxes.order_item_id > order_items.id [delete: cascade, update: cascade]
Ref: order_item_taxes.tax_id > taxes.id [delete: set null, update: cascade]